WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21283
Profiler Crashes When Started
https://bugs.webkit.org/show_bug.cgi?id=21283
Summary
Profiler Crashes When Started
Carsten Nielsen
Reported
2008-10-01 13:19:25 PDT
Using the latest nightly [37126] when attempting to start the Javascript profiler from the web inspector it crashes. There does not seem to be an special circumstances, it happens anytime I try to start it. I am using the web inspector in a separate window.
Attachments
Crash details from the crash report dialog.
(23.95 KB, text/plain)
2008-10-01 13:24 PDT
,
Carsten Nielsen
no flags
Details
System configuration from crash report dialog.
(1.19 KB, text/plain)
2008-10-01 13:26 PDT
,
Carsten Nielsen
no flags
Details
patch
(3.83 KB, patch)
2008-10-02 00:28 PDT
,
Geoffrey Garen
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carsten Nielsen
Comment 1
2008-10-01 13:24:35 PDT
Created
attachment 23990
[details]
Crash details from the crash report dialog.
Carsten Nielsen
Comment 2
2008-10-01 13:26:22 PDT
Created
attachment 23991
[details]
System configuration from crash report dialog.
Mark Rowe (bdash)
Comment 3
2008-10-01 14:14:44 PDT
<
rdar://problem/6261955
>
Kevin McCullough
Comment 4
2008-10-01 16:41:09 PDT
This did not occur in
r37056
. I'll see if I can reduce further.
Kevin McCullough
Comment 5
2008-10-01 16:57:23 PDT
From my investigations it looks like 37125 is the culprit.
Geoffrey Garen
Comment 6
2008-10-02 00:28:39 PDT
Created
attachment 24010
[details]
patch
Geoffrey Garen
Comment 7
2008-10-02 09:23:08 PDT
Committed revision 37191.
Darin Adler
Comment 8
2008-10-02 09:25:10 PDT
Thanks. My bad!
Darin Adler
Comment 9
2008-10-02 09:26:44 PDT
Things in header files shouldn't be marked "static", tho!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug