2008-10-02  Geoffrey Garen  <ggaren@apple.com>

Reviewed by Sam Weinig.

        Fixed https://bugs.webkit.org/show_bug.cgi?id=21283.
        Profiler Crashes When Started

        * VM/Machine.cpp:
        * VM/Machine.h:
        (JSC::makeHostCallFramePointer):
        (JSC::isHostCallFrame):
        (JSC::stripHostCallFrameBit): Moved some things to the header so
        JSGlobalObject could use them.

        * kjs/JSGlobalObject.h:
        (JSC::JSGlobalObject::JSGlobalObjectData::JSGlobalObjectData): Call the
        new makeHostCallFramePointer API, since 0 no longer indicates a host
        call frame.



Canonical link: https://commits.webkit.org/29452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37191 268f45cc-cd09-0410-ab3c-d52691b4dbfc