JavaScriptCore/VM/Machine.h
@@ -314,6 +314,7 @@ namespace JSC {
 
     ALWAYS_INLINE void Machine::initializeCallFrame(Register* callFrame, CodeBlock* codeBlock, Instruction* vPC, ScopeChainNode* scopeChain, Register* r, int returnValueRegister, int argc, JSValue* function)
     {
+        ASSERT(r); // use makeHostCallFramePointer(0) to create a host call frame sentinel.
         callFrame[RegisterFile::CodeBlock] = codeBlock;
         callFrame[RegisterFile::ScopeChain] = scopeChain;
         callFrame[RegisterFile::CallerRegisters] = r;
@@ -323,6 +324,23 @@ namespace JSC {
         callFrame[RegisterFile::Callee] = function;
         callFrame[RegisterFile::OptionalCalleeActivation] = nullJSValue;
         callFrame[RegisterFile::OptionalCalleeArguments] = nullJSValue;
+    }
+
+    static const intptr_t HostCallFrameMask = 1;
+
+    static inline Register* makeHostCallFramePointer(Register* callFrame)
+    {
+        return reinterpret_cast<Register*>(reinterpret_cast<intptr_t>(callFrame) | HostCallFrameMask);
+    }
+
+    static inline bool isHostCallFrame(Register* callFrame)
+    {
+        return reinterpret_cast<intptr_t>(callFrame) & HostCallFrameMask;
+    }
+
+    static inline Register* stripHostCallFrameBit(Register* callFrame)
+    {
+        return reinterpret_cast<Register*>(reinterpret_cast<intptr_t>(callFrame) & ~HostCallFrameMask);
     }
 
 } // namespace JSC
